better folder structure

--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
   <script src="https://unpkg.com/react-redux@7.2.4/dist/react-redux.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   
-  <script type="text/babel" src="actions.js"></script>
-  <script type="text/babel" src="reducers.js"></script>
-  <script type="text/babel" src="store.js"></script>
-  <script type="text/babel" src="App.js"></script>
+  <script type="text/babel" src="src/redux/actions.js"></script>
+  <script type="text/babel" src="src/redux/reducers.js"></script>
+  <script type="text/babel" src="src/redux/store.js"></script>
+  <script type="text/babel" src="src/components/App.js"></script>
 </body>
 </html> 
